--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start-js": "react-scripts --openssl-legacy-provider start",
     "start": "npm-run-all -p watch-css start-js",
-    "build": "react-scripts build && cp -r src/assets/images/ build/images",
+    "build": "react-scripts --openssl-legacy-provider build && cp -r src/assets/images/ build/images",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
