--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.8"
 services:
-  eksctlexplorer:
+  kubectlexplorer:
     restart: always
     build:
       context: ./
       cache_from:
         - node:alpine
-    container_name: eksctl-explorer
-    hostname: eksctl-explorer
+    container_name: kubectl-explorer
+    hostname: kubectl-explorer
     network_mode: bridge
     volumes:
       - ./:/usr/app
